--- a/style.css
+++ b/style.css
@@ -267,12 +267,16 @@ padding-bottom: 30px;
 
 footer
 {
-    position: absolute; 
+    position: fixed;
     bottom: 0; 
     left: 0; 
     padding-bottom: 1px;
     padding-left: 15px;
-    background-color: rgba(197, 197, 197, .7)
+    padding-right: 15px;
+    z-index:1;
+    /* background-color: rgba(197, 197, 197, .7);
+    backdrop-filter: blur(10px); */
+
 
 
 }
@@ -280,15 +284,32 @@ footer
 .Linkedin
 {
     text-decoration: underline;
-    position: absolute; 
+    position: fixed;
     bottom: 0; 
     right: 0; 
-    padding-bottom: 1x;
+    padding-bottom: 1px;
     padding-right: 15px;
+    padding-left: 15px;
+    z-index:1;
+    /* background-color: rgba(197, 197, 197, .7);
+    backdrop-filter: blur(10px); */
 }
 
 
+.footer-bar
+{ 
+    background-color: rgba(197, 197, 197, .1);
 
+    position: fixed;
+    bottom: 0; 
+    right: 0; 
+    padding-bottom: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
+    height: 40px;
+
+    backdrop-filter: blur(10px);}
 
 
 
